# mcp-for-azure-devops-boards

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  build.rs
.claude/agents/: code-reviewer.md  plan-reviewer.md
.claude/rules/: agent.md  mcp.md  project.md  rust.md
.github/workflows/: cd-tag-build-and-release.yml  ci-pr-build-and-test.yml
docs/: ARCHITECTURE.md  PROJECT.md
docs/plans/: 1_azure_devops_api_trait_integration_tests_20260311142611.md  2_codebase_quality_security_perf_20260311224036.md  3_cli_install_flag_mcp_client_config_20260312160258.md
mcp-tools-codegen/: Cargo.toml
mcp-tools-codegen/src/: lib.rs
npm/meta/: package.json
src/: compact_llm.rs  install.rs  lib.rs  main.rs
src/azure/: api_trait.rs  attachments.rs  boards.rs  classification_nodes.rs  client.rs  iterations.rs  mod.rs  models.rs  organizations.rs  projects.rs  tags.rs  teams.rs  work_items.rs
src/mcp/: server.rs
src/mcp/tools/: mod.rs
src/mcp/tools/classification_nodes/: list_area_paths.rs  list_iteration_paths.rs  mod.rs
src/mcp/tools/organizations/: get_current_user.rs  list_organizations.rs  mod.rs
src/mcp/tools/projects/: list_projects.rs  mod.rs
src/mcp/tools/support/: board_columns_to_csv.rs  csv_sanitize.rs  default_comment_format.rs  default_text_format.rs  deserialize_non_empty_string.rs  mod.rs  simplify_work_item_json.rs  tool_text_success.rs  work_items_to_csv.rs
src/mcp/tools/tags/: list_tags.rs  mod.rs
src/mcp/tools/teams/: get_team.rs  get_team_current_iteration.rs  list_team_members.rs  list_teams.rs  mod.rs
src/mcp/tools/teams/boards/: get_team_board.rs  list_board_columns.rs  list_board_rows.rs  list_team_boards.rs  mod.rs
src/mcp/tools/work_item_types/: list_work_item_types.rs  mod.rs
src/mcp/tools/work_items/: add_comment.rs  create_work_item.rs  get_work_item.rs  get_work_items.rs  link_work_items.rs  mod.rs  query_work_items.rs  query_work_items_by_wiql.rs  update_comment.rs  update_work_item.rs
src/server/: http.rs
tests/: test_install_e2e.rs  test_server_http.rs  test_tools_boards.rs  test_tools_classification_nodes.rs  test_tools_organizations.rs  test_tools_projects.rs  test_tools_tags.rs  test_tools_teams.rs  test_tools_work_item_types.rs  test_tools_work_items.rs
tests/common/: mod.rs
tests/docker/claude-code/: Dockerfile
tests/docker/cursor/: Dockerfile
tests/docker/gemini-cli/: Dockerfile
