[package]
name = "azure-devops-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.5.1"
hyper-util = { version = "0.1.10", features = ["tokio", "service", "server", "http1", "http2"] }
tower = "0.5.2"
azure_identity = "0.17"
azure_core = "0.17"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
rmcp = { version = "=0.8.5", features = ["schemars", "transport-streamable-http-server", "transport-io"] }
rmcp-macros = "=0.8.5"
schemars = "0.8"
base64 = "0.22"

[dev-dependencies]
mockall = "0.12"
